--- a/src/templates/speller.html
+++ b/src/templates/speller.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <section id="project" class="hero is-fullheight">
+    <div class="hero-head">
+        <h1 class="has-text-centered is-fullwidth is-size-3">Runya Speller</h1>
+    </div>
     <div class="hero-body">
         <div class="container">
             <div class="field">
