--- a/src/templates/speller.html
+++ b/src/templates/speller.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='bulma.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='touchup.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='vue.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='suggestions.js') }}"></script>
-    <title>Runyankole Spell Checker</title>
+    <title>Spell Checker</title>
 </head>
 <body>
 <section id="project" class="hero is-fullheight">
@@ -15,17 +13,10 @@
     </div>
     <div class="hero-body">
         <div class="container">
-            <div class="field">
-                <div class="control" :class="{'is-loading':is_searching}">
-                    <input v-model="words" id="box" class="input is-large" type="text" placeholder="...">
-                    <div class="dropdown-menu" :class="{active:is_active}" id="dropdown-menu" role="menu">
-                        <div class="dropdown-content">
-                            <a @click="update_words(suggestion)" v-for="suggestion in suggestions" v-text="suggestion" href="#" class="dropdown-item">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <ul>
+                <li><a href="/luganda">Luganda</a></li>
+                <li><a href="/runyankole">Runyankole</a></li>
+            </ul>
         </div>
     </div>
 </section>
