--- a/src/templates/speller.html
+++ b/src/templates/speller.html
@@ -9,7 +9,7 @@
 <body>
 <section id="project" class="hero is-fullheight">
     <div class="hero-head">
-        <h1 class="has-text-centered is-fullwidth is-size-3">Runya Speller</h1>
+        <h1 class="has-text-centered is-fullwidth is-size-3">Speller</h1>
     </div>
     <div class="hero-body">
         <div class="container">
