--- a/src/static/touchup.css
+++ b/src/static/touchup.css
@@ -1,3 +1,11 @@
+* {
+  font-family: 'Nunito', sans-serif !important;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+}
+
 .active{
     display: unset !important;
 }
@@ -11,4 +19,13 @@
 	display: block;
 	height: 2em;
 	width: 2em;
+}
+
+.spell-check {
+	min-height: 80vh;
+}
+
+
+.padding-left {
+	margin-left: 2vw;
 }
