--- a/src/static/touchup.css
+++ b/src/static/touchup.css
@@ -21,11 +21,57 @@
 	width: 2em;
 }
 
-.spell-check {
-	min-height: 80vh;
+#actual-words {
+	height: 65vh;
+	overflow-y: scroll;
 }
 
 
 .padding-left {
 	margin-left: 2vw;
+}
+
+.word-holder {
+	margin-bottom: 10px;
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.word {
+    cursor: pointer;
+}
+
+.word:hover {
+    text-decoration: none !important;
+	color: unset;
+	box-shadow: inset 0 -4px 0 #009688 !important;
+}
+
+.corrections {
+	position: absolute;
+	width: 80%;
+}
+
+.corrections ul{
+	max-height: 25vh;
+	overflow-y: scroll;
+}
+
+.relative {
+	position: relative;
+}
+
+.suggestion {
+	padding: .5rem 0;
+}
+
+.loader-s {
+	padding-left: 25%;
+	padding-right: 25%;
+}
+
+.retry:hover {
+	background: #009688;
+	border-radius: 20px;
+	cursor: pointer;
 }
