--- a/src/templates/runyankole.html
+++ b/src/templates/runyankole.html
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="{{ url_for('static', filename='vue.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='suggestions.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='ckeditor.js') }}"></script>
-{#    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>#}
     <title>Runyankole Spell Checker</title>
 </head>
 <body>
@@ -18,11 +17,9 @@
     <div class="hero-head">
         <nav>
     <div class="nav-wrapper teal">
-      <a href="#" class="brand-logo padding-left">Runyankole Spell Checker</a>
+      <a href="/" class="brand-logo padding-left">Runyankole Spell Checker</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-{#        <li><a href="sass.html">Sass</a></li>#}
-{#        <li><a href="badges.html">Components</a></li>#}
-{#        <li><a href="collapsible.html">JavaScript</a></li>#}
+        <li><a href="/luganda">Luganda</a></li>
       </ul>
     </div>
   </nav>
@@ -35,28 +32,37 @@
                         <textarea spellcheck="false" name="content" id="editor"></textarea>
                     </div>
                 </div>
-                <div id="spell-check" class="column is-one-quarter is-offset-1 has-text-centered spell-check card">
+                <div id="spell-check" class="column is-one-quarter is-offset-1 has-text-centered card">
                     <h4 class="subtitle is-size-3">Misspelled Words</h4>
-                    <ul class="is-text is-size-5">
-                        <li v-for="word in incorrectlySpelled" v-text="word"></li>
-                    </ul>
-                    <span class="is-text is-size-6" v-if="incorrectlySpelled.length < 1">No misspelled words</span>
+                    <div id="actual-words">
+                        <ul class="is-text is-size-5 relative">
+                            <li class="word-holder" v-for="word in incorrectlySpelled">
+                                <span @click="word === suggestionsFor && suggestionsVisible ? toggleSuggestionList(false) : suggest(word)" class="word" v-text="word"></span>
+                                <div class="corrections is-size-6">
+                                    <ul v-if="word === suggestionsFor && suggestionsVisible" class="card">
+                                    <li class="suggestion loader-s" v-if="suggestionsFetching">
+                                      <div class="progress">
+                                          <div class="indeterminate"></div>
+                                      </div>
+                                    </li>
+                                    <li class="suggestion" v-if="!suggestionsFetching && suggestions.length === 0">
+                                        No suggestions
+                                    </li>
+                                    <li class="suggestion" v-if="!suggestionsFetching" v-for="suggestion in suggestions" @click="replace(word, suggestion)">
+                                        <span class="word" v-text="suggestion"></span>
+                                    </li>
+                                </ul>
+                                </div>
+                            </li>
+                        </ul>
+                        <span class="is-text is-size-6" v-if="incorrectlySpelled.length < 1">
+                            <span class="is-size-6"><img @click="retry()" class="retry" src="{{ url_for('static', filename='baseline-refresh-24px.svg') }}" alt="Refresh"></span><br>
+                            No misspelled words
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
-{#        <div class="container">#}
-{#            <div id="project" class="field">#}
-{#                <div class="control" :class="{'is-loading':is_searching}">#}
-{#                    <input v-model="words" id="box" class="input is-large" type="text" placeholder="...">#}
-{#                    <div class="dropdown-menu" :class="{active:is_active}" id="dropdown-menu" role="menu">#}
-{#                        <div class="dropdown-content">#}
-{#                            <a @click="update_words(suggestion)" v-for="suggestion in suggestions" v-text="suggestion" href="#" class="dropdown-item">#}
-{#                            </a>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
     </div>
 </section>
 </body>
