Add unicode support Improve data cleaning

--- a/src/templates/luganda.html
+++ b/src/templates/luganda.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/nunito/font.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='materialize.min.css') }}">
     <script>const language = 'luganda';</script>
+    <script type="text/javascript" src="{{ url_for('static', filename='unicode.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='vue.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='suggestions.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='ckeditor.js') }}"></script>
