--- a/src/templates/speller.html
+++ b/src/templates/speller.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='touchup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/nunito/font.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='materialize.min.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='unicode.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='vue.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='suggestions.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='ckeditor.js') }}"></script>
